--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/express": "^1.3.34",
     "@clerk/nextjs": "^6.9.10",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-label": "^2.1.1",
